--- a/output/django-trigger-happy-1.0.0.html
+++ b/output/django-trigger-happy-1.0.0.html
@@ -195,11 +195,11 @@ Trigger Happy            </a>
 <section class="well" id="related-posts">
     <h4>Related Posts:</h4>
     <ul>
+        <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-1.5.1.html">Trigger Happy 1.5.1</a></li>
         <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-1.5.0-hacktoberfest.html">Trigger Happy 1.5.0 "Hacktoberfest"</a></li>
         <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-1.4.0.html">Trigger Happy 1.4.0</a></li>
         <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-1.2.0.html">Django Trigger Happy 1.2.0</a></li>
         <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-1.1.0.html">Django Trigger Happy 1.1.0</a></li>
-        <li><a href="https://blog.trigger-happy.eu/trigger-happy-instapush.html">Trigger Happy : Setup Instapush service</a></li>
     </ul>
 </section>
     <hr/>
