--- a/output/django-trigger-happy-1.2.0.html
+++ b/output/django-trigger-happy-1.2.0.html
@@ -206,11 +206,11 @@ docker-compose run web  python manage.py publish --settings=django_th.settings_d
 <section class="well" id="related-posts">
     <h4>Related Posts:</h4>
     <ul>
+        <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-1.5.1.html">Trigger Happy 1.5.1</a></li>
         <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-1.5.0-hacktoberfest.html">Trigger Happy 1.5.0 "Hacktoberfest"</a></li>
         <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-1.4.0.html">Trigger Happy 1.4.0</a></li>
         <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-1.1.0.html">Django Trigger Happy 1.1.0</a></li>
         <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-1.0.0.html">Django Trigger Happy 1.0.0</a></li>
-        <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-0.13.2.html">Django Trigger Happy 0.13.2</a></li>
     </ul>
 </section>
     <hr/>
