--- a/output/django-trigger-happy-1.5.0-hacktoberfest.html
+++ b/output/django-trigger-happy-1.5.0-hacktoberfest.html
@@ -236,11 +236,11 @@ Console access: <img alt="Adding a service" src="http://127.0.0.1:8000/admin/dja
 <section class="well" id="related-posts">
     <h4>Related Posts:</h4>
     <ul>
+        <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-1.5.1.html">Trigger Happy 1.5.1</a></li>
         <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-1.4.0.html">Trigger Happy 1.4.0</a></li>
         <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-1.2.0.html">Django Trigger Happy 1.2.0</a></li>
         <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-1.1.0.html">Django Trigger Happy 1.1.0</a></li>
         <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-1.0.0.html">Django Trigger Happy 1.0.0</a></li>
-        <li><a href="https://blog.trigger-happy.eu/django-trigger-happy-0.13.2.html">Django Trigger Happy 0.13.2</a></li>
     </ul>
 </section>
     <hr/>
